<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/gridLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="2"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:useDefaultMargins="true"
    tools:context="com.power.mortgagecalculator2.MainActivity" >

    <TextView
        android:id="@+id/purchaseAmtTextView"
        android:layout_gravity="left"
        android:labelFor="@+id/purchaseAmtEditText"
        android:text="@string/purchase_price_text_view"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/purchaseAmtEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:digits="0123456789"
        android:inputType="numberDecimal"
        android:maxLength="10" >

        <requestFocus />
    </EditText>
 

    <TextView
        android:id="@+id/purchaseAmtDisplayTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_gravity="fill_horizontal"
        android:layout_row="0"
        android:background="@android:color/holo_blue_bright"
        android:padding="@dimen/textview_padding"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/downPayTextView"
        android:layout_gravity="left"
        android:labelFor="@+id/downPayEditText"
        android:text="@string/downpay_text_view"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/downPayEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:digits="0123456789"
        android:inputType="numberDecimal"
        android:maxLength="10" />

    <TextView
        android:id="@+id/downPayDisplayTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_gravity="fill_horizontal"
        android:layout_row="1"
        android:background="@android:color/holo_green_light"
        android:padding="@dimen/textview_padding"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/interestRateTextView"
        android:layout_gravity="left"
        android:labelFor="@+id/interestRateEditText"
        android:text="@string/interest_rate_text_view"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/interestRateEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:digits="0123456789"
        android:inputType="numberDecimal"
        android:maxLength="3" />

    <TextView
        android:id="@+id/interestRateDisplayTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_gravity="fill_horizontal"
        android:layout_row="2"
        android:background="@android:color/holo_red_light"
        android:padding="@dimen/textview_padding"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/customLengthTextView"
        android:layout_gravity="left"
        android:text="@string/custom_length_string"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <SeekBar
        android:id="@+id/customLengthSeekBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:max="30"
        android:progress="15" />

    <TextView
        android:id="@+id/loanAmtTextView"
        android:layout_gravity="left"
        android:text="@string/loan_amt_string_text_view"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/loanAmtDisplayTextView"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:background="@android:color/holo_orange_light"
        android:gravity="center"
        android:padding="@dimen/textview_padding"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/monthlyTextView"
        android:layout_gravity="left"
        android:text="@string/monthly_payments_string_text_view"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/monthlyAmtDisplayTextView"
        android:layout_width="wrap_content"
        android:layout_gravity="left"
        android:background="@android:color/holo_orange_light"
        android:padding="@dimen/textview_padding"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/yearsTextView"
        android:layout_gravity="left"
        android:text="@string/years_text_view"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/yearsAmtTextView"
        android:layout_gravity="left"
        android:text="@string/amount_text_view"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/tenYearsTextView"
        android:layout_gravity="left"
        android:text="@string/ten_years"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/tenYearsAmtDisplayTextView"
        android:layout_gravity="left"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/twentyYearsTextView"
        android:layout_gravity="left"
        android:text="@string/twenty_years"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/twentyYearsAmtDisplayTextView"
        android:layout_gravity="left"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/thirtyYearsTextView"
        android:layout_gravity="left"
        android:text="@string/thirty_years"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/thirtyYearsAmtDisplayTextView"
        android:layout_gravity="left"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</GridLayout>
